--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1874,6 +1874,10 @@ periodics:
         mountPath: /etc/test-account
         readOnly: true
       env:
+      - name: E2E_MIN_CLUSTER_NODES
+        value: 16
+      - name: E2E_MAX_CLUSTER_NODES
+        value: 16
       - name: GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
