Add quotes to numbers when adding as env var

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1875,9 +1875,9 @@ periodics:
         readOnly: true
       env:
       - name: E2E_MIN_CLUSTER_NODES
-        value: 16
+        value: "16"
       - name: E2E_MAX_CLUSTER_NODES
-        value: 16
+        value: "16"
       - name: GOOGLE_APPLICATION_CREDENTIALS
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
