--- a/ci/prow/boskos/resources.yaml
+++ b/ci/prow/boskos/resources.yaml
@@ -34,5 +34,16 @@ resources:
   - knative-boskos-18
   - knative-boskos-19
   - knative-boskos-20
+  - knative-boskos-21
+  - knative-boskos-22
+  - knative-boskos-23
+  - knative-boskos-24
+  - knative-boskos-25
+  - knative-boskos-26
+  - knative-boskos-27
+  - knative-boskos-28
+  - knative-boskos-29
+  - knative-boskos-30
+  - knative-boskos-31
   state: dirty
   type: gke-project
