--- a/ci/prow/boskos/config.yaml
+++ b/ci/prow/boskos/config.yaml
@@ -53,7 +53,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: boskos
-        image: gcr.io/k8s-testimages/boskos:v20190326-21e7f896f
+        image: gcr.io/k8s-testimages/boskos:v20190320-fb2c17c2f
         args:
         - --storage=/store/boskos.json
         - --config=/etc/config/config
@@ -114,11 +114,13 @@ spec:
       terminationGracePeriodSeconds: 300
       containers:
       - name: boskos-janitor
-        image: gcr.io/k8s-testimages/janitor:v20190326-21e7f896f
+        image: gcr.io/k8s-testimages/janitor:v20190320-fb2c17c2f
         args:
-        - --service-account=/etc/test-account/service-account.json
         - --resource-type=gke-project
         - --pool-size=10
+        - --
+        - --service_account=/etc/test-account/service-account.json
+        - --hours=0
         volumeMounts:
         - mountPath: /etc/test-account
           name: service
@@ -147,6 +149,6 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: boskos-reaper
-        image: gcr.io/k8s-testimages/reaper:v20190326-21e7f896f
+        image: gcr.io/k8s-testimages/reaper:v20190319-1a5a7d7fb
         args:
         - --resource-type=gke-project
