--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -96,6 +96,11 @@ presubmits:
     - integration-tests: true
     - go-coverage: true
       go-coverage-threshold: 50
+  
+  knative/observability:
+    - build-tests: true
+    - unit-tests: true
+    - integration-tests: true
 
 periodics:
   knative/serving:
@@ -226,3 +231,7 @@ periodics:
 
   knative/client:
     - continuous: false
+  
+  knative/observability:
+    - continuous: true
+      cron: "30 * * * *" # Run every hour and 30 minutes
