Add knative/community to tide

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -63,6 +63,7 @@ tide:
     - knative/pkg
     - knative/caching
     - knative/website
+    - knative/community
     labels:
     - lgtm
     - approved
