installed released yamls for released branch

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1690,7 +1690,7 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-central1
-      - name: VERSION_NUMBER
+      - name: BRANCH_VERSION
         value: "0.4"
     volumes:
     - name: docker-graph
@@ -1734,7 +1734,7 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-central1
-      - name: VERSION_NUMBER
+      - name: BRANCH_VERSION
         value: "0.5"
     volumes:
     - name: docker-graph
@@ -2225,7 +2225,7 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-central1
-      - name: VERSION_NUMBER
+      - name: BRANCH_VERSION
         value: "0.5"
     volumes:
     - name: docker-graph
@@ -2551,7 +2551,7 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-central1
-      - name: VERSION_NUMBER
+      - name: BRANCH_VERSION
         value: "0.5"
     volumes:
     - name: docker-graph
@@ -2767,7 +2767,7 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-central1
-      - name: VERSION_NUMBER
+      - name: BRANCH_VERSION
         value: "0.5"
     volumes:
     - name: docker-graph
