--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -196,6 +196,12 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-eventing-sources-0.5-continuous
 - name: ci-knative-serving-0.6-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.6-continuous
+- name: ci-knative-build-0.6-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-build-0.6-continuous
+- name: ci-knative-eventing-0.6-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.6-continuous
+- name: ci-knative-eventing-sources-0.6-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-sources-0.6-continuous
 dashboards:
 - name: knative-serving
   dashboard_tab:
@@ -356,6 +362,15 @@ dashboards:
   dashboard_tab:
   - name: serving
     test_group_name: ci-knative-serving-0.6-continuous
+    base_options: "sort-by-name="
+  - name: build
+    test_group_name: ci-knative-build-0.6-continuous
+    base_options: "sort-by-name="
+  - name: eventing
+    test_group_name: ci-knative-eventing-0.6-continuous
+    base_options: "sort-by-name="
+  - name: eventing-sources
+    test_group_name: ci-knative-eventing-sources-0.6-continuous
     base_options: "sort-by-name="
 dashboard_groups:
 - name: knative
