--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -116,6 +116,18 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-build-go-coverage
   num_failures_to_alert: 9999
   short_text_metric: "coverage"
+- name: ci-knative-client-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-client-nightly-release
+- name: ci-knative-client-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-client-dot-release
+  alert_stale_results_hours: 170
+- name: ci-knative-client-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-client-auto-release
+  alert_stale_results_hours: 3
+- name: pull-knative-client-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-client-go-coverage
+  num_failures_to_alert: 9999
+  short_text_metric: "coverage"
 - name: ci-knative-docs-continuous
   gcs_prefix: knative-prow/logs/ci-knative-docs-continuous
   alert_stale_results_hours: 3
@@ -180,10 +192,6 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-observability-continuous
   alert_stale_results_hours: 3
   num_failures_to_alert: 3
-- name: pull-knative-client-test-coverage
-  gcs_prefix: knative-prow/logs/ci-knative-client-go-coverage
-  num_failures_to_alert: 9999
-  short_text_metric: "coverage"
 - name: ci-knative-serving-0.4-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.4-continuous
 - name: ci-knative-serving-0.5-continuous
@@ -266,6 +274,20 @@ dashboards:
   - name: coverage
     test_group_name: pull-knative-build-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: knative-client
+  dashboard_tab:
+  - name: nightly
+    test_group_name: ci-knative-client-nightly-release
+    base_options: "sort-by-name="
+  - name: dot-release
+    test_group_name: ci-knative-client-dot-release
+    base_options: "sort-by-name="
+  - name: auto-release
+    test_group_name: ci-knative-client-auto-release
+    base_options: "sort-by-name="
+  - name: coverage
+    test_group_name: pull-knative-client-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-docs
   dashboard_tab:
   - name: continuous
@@ -334,11 +356,6 @@ dashboards:
   - name: continuous
     test_group_name: ci-knative-observability-continuous
     base_options: "sort-by-name="
-- name: knative-client
-  dashboard_tab:
-  - name: coverage
-    test_group_name: pull-knative-client-test-coverage
-    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-0.4
   dashboard_tab:
   - name: serving
@@ -377,6 +394,7 @@ dashboard_groups:
   dashboard_names:
   - "knative-serving"
   - "knative-build"
+  - "knative-client"
   - "knative-docs"
   - "knative-eventing"
   - "knative-eventing-sources"
@@ -384,4 +402,3 @@ dashboard_groups:
   - "knative-pkg"
   - "knative-caching"
   - "knative-observability"
-  - "knative-client"
