--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -116,6 +116,10 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-build-go-coverage
   num_failures_to_alert: 9999
   short_text_metric: "coverage"
+- name: ci-knative-client-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-client-continuous
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
 - name: ci-knative-client-nightly-release
   gcs_prefix: knative-prow/logs/ci-knative-client-nightly-release
 - name: ci-knative-client-dot-release
@@ -276,6 +280,9 @@ dashboards:
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-client
   dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-client-continuous
+    base_options: "sort-by-name="
   - name: nightly
     test_group_name: ci-knative-client-nightly-release
     base_options: "sort-by-name="
