Fixing the cloud mail dependencies

--- a/images/monitoring/Dockerfile
+++ b/images/monitoring/Dockerfile
@@ -30,10 +30,20 @@ RUN go get -u google.golang.org/genproto/protobuf/field_mask
 
 #TODO(yt3liu): Use the alpha released after the go library builds correctly with the latest release
 #RUN wget https://storage.googleapis.com/cloud-mail-client-libraries/cloudmail-v1alpha3-go.zip
-RUN wget https://storage.googleapis.com/knative-monitoring/cloudmail-v1alpha3-go.zip
+#RUN wget https://storage.cloud.google.com/cloud-mail-client-libraries/cloudmail-v1alpha3-go.zip
+#RUN wget https://storage.googleapis.com/knative-monitoring/cloudmail-v1alpha3-go.zip
+RUN wget https://storage.googleapis.com/joyceyu-test/cloudmail-v1alpha3-go-2.zip
 
 RUN apt-get install zip unzip
-RUN unzip cloudmail-v1alpha3-go.zip -d cloudmail-v1alpha3-go
+#RUN apt-get install fastjar
+#RUN apt-get -qq install file
+#RUN ls
+#RUN jar xvf cloudmail-v1alpha3-go.zip
+#RUN unzip -v
+#RUN file cloudmail-v1alpha3-go.zip
+#RUN unzip cloudmail-v1alpha3-go.zip -d cloudmail-v1alpha3-go
+RUN unzip cloudmail-v1alpha3-go-2.zip
+RUN ls
 RUN apt-get -qq install rsync
 RUN cp -r cloudmail-v1alpha3-go/google.golang.org/genproto/googleapis/cloud/mail /go/src/google.golang.org/genproto/googleapis/cloud/mail
 RUN cp -r cloudmail-v1alpha3-go/cloud.google.com/go/mail /go/src/cloud.google.com/go/mail
