--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,7 +1,14 @@
 # Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
 # for detailed Gopkg.toml documentation.
 
-required = [  
+required = [
+]
+
+# TODO(joyceyu): Remove this once the dependency is available through go get
+# https://github.com/knative/test-infra/issues/841
+ignored = [
+  "cloud.google.com/go/mail*",
+  "google.golang.org/genproto/googleapis/cloud/mail*"
 ]
 
 # TODO(mattmoor): Find a way to bundle the licenseclassifier's
