--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -93,6 +93,9 @@ test_groups:
 - name: ci-knative-serving-performance
   gcs_prefix: knative-prow/logs/ci-knative-serving-performance
   short_text_metric: "perf_latency"
+- name: ci-knative-serving-performance-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-performance-mesh
+  short_text_metric: "perf_latency"
 - name: pull-knative-serving-test-coverage
   gcs_prefix: knative-prow/logs/ci-knative-serving-go-coverage
   num_failures_to_alert: 9999
@@ -253,6 +256,9 @@ dashboards:
     description: "95% latency in ms"
   - name: performance
     test_group_name: ci-knative-serving-performance
+    base_options: "exclude-filter-by-regex=Overall$&group-by-target=&expand-groups=&sort-by-name="
+  - name: performance-mesh
+    test_group_name: ci-knative-serving-performance-mesh
     base_options: "exclude-filter-by-regex=Overall$&group-by-target=&expand-groups=&sort-by-name="
   - name: coverage
     test_group_name: pull-knative-serving-test-coverage
