--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2145,6 +2145,43 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
+- cron: "0 3 * * *"
+  name: ci-knative-serving-performance-mesh
+  agent: kubernetes
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      args:
+      - "--scenario=kubernetes_execute_bazel"
+      - "--clean"
+      - "--job=$(JOB_NAME)"
+      - "--repo=github.com/knative/serving"
+      - "--root=/go/src"
+      - "--service-account=/etc/test-account/service-account.json"
+      - "--upload=gs://knative-prow/logs"
+      - "--timeout=120" # Avoid overrun
+      - "--" # end bootstrap args, scenario args below
+      - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
+      - "./test/performance-tests.sh"
+      - "--mesh"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      env:
+      - name: E2E_MIN_CLUSTER_NODES
+        value: "16"
+      - name: E2E_MAX_CLUSTER_NODES
+        value: "16"
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: E2E_CLUSTER_REGION
+        value: us-central1
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
 - cron: "5 9 * * *"
   name: ci-knative-serving-webhook-apicoverage
   agent: kubernetes
