--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -2,13 +2,33 @@
 # for detailed Gopkg.toml documentation.
 
 required = [
+  # TODO(joyceyu): The below dependencies are used in mail. Since the mail source is
+  # added manually after dep ensure is done, including these dependencies here to make
+  # sure those dependencies are included.
+  # Remove this once the dependency is available through go get
+  # https://github.com/knative/test-infra/issues/841
+  "cloud.google.com/go",
+  "github.com/golang/protobuf/proto",
+  "github.com/golang/protobuf/ptypes/empty",
+  "github.com/golang/protobuf/ptypes/timestamp",
+  "github.com/googleapis/gax-go/v2",
+  "google.golang.org/api/iterator",
+  "google.golang.org/api/option",
+  "google.golang.org/api/transport",
+  "google.golang.org/grpc",
+  "google.golang.org/grpc/codes",
+  "google.golang.org/grpc/metadata",
+  "google.golang.org/grpc/status",
+  "google.golang.org/genproto/googleapis/api/annotations",
+  "google.golang.org/genproto/googleapis/iam/v1",
+  "google.golang.org/genproto/protobuf/field_mask",
 ]
 
 # TODO(joyceyu): Remove this once the dependency is available through go get
 # https://github.com/knative/test-infra/issues/841
 ignored = [
   "cloud.google.com/go/mail*",
-  "google.golang.org/genproto/googleapis/cloud/mail*"
+  "google.golang.org/genproto/googleapis/cloud/mail*",
 ]
 
 # TODO(mattmoor): Find a way to bundle the licenseclassifier's
