enable debug logging

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -36,7 +36,7 @@ plank:
     gcs_credentials_secret: "test-account"
 prowjob_namespace: default
 pod_namespace: test-pods
-log_level: info
+log_level: debug
 branch-protection:
   orgs:
     knative:
