Fix CamelCased org/repo names in Prow/Testgrid configs

--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -448,6 +448,6 @@ dashboard_groups:
   - "knative-pkg"
   - "knative-caching"
   - "knative-observability"
-- name: googlecloudplatform
+- name: GoogleCloudPlatform
   dashboard_names:
   - "googlecloudplatform-cloud-run-events"
