--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1593,7 +1593,7 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
-  googlecloudplatform/cloud-run-events:
+  GoogleCloudPlatform/cloud-run-events:
   - name: pull-googlecloudplatform-cloud-run-events-build-tests
     agent: kubernetes
     context: pull-googlecloudplatform-cloud-run-events-build-tests
@@ -1707,7 +1707,7 @@ presubmits:
     trigger: "(?m)^/test (all|pull-googlecloudplatform-cloud-run-events-go-coverage),?(\\s+|$)"
     optional: true
     decorate: true
-    clone_uri: "https://github.com/googlecloudplatform/cloud-run-events.git"
+    clone_uri: "https://github.com/GoogleCloudPlatform/cloud-run-events.git"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/coverage:latest
@@ -3577,7 +3577,7 @@ periodics:
       - "--scenario=kubernetes_execute_bazel"
       - "--clean"
       - "--job=$(JOB_NAME)"
-      - "--repo=github.com/googlecloudplatform/cloud-run-events"
+      - "--repo=github.com/GoogleCloudPlatform/cloud-run-events"
       - "--root=/go/src"
       - "--service-account=/etc/test-account/service-account.json"
       - "--upload=gs://knative-prow/logs"
@@ -3611,7 +3611,7 @@ periodics:
       - "--scenario=kubernetes_execute_bazel"
       - "--clean"
       - "--job=$(JOB_NAME)"
-      - "--repo=github.com/googlecloudplatform/cloud-run-events"
+      - "--repo=github.com/GoogleCloudPlatform/cloud-run-events"
       - "--root=/go/src"
       - "--service-account=/etc/nightly-account/service-account.json"
       - "--upload=gs://knative-prow/logs"
@@ -3645,7 +3645,7 @@ periodics:
       - "--scenario=kubernetes_execute_bazel"
       - "--clean"
       - "--job=$(JOB_NAME)"
-      - "--repo=github.com/googlecloudplatform/cloud-run-events"
+      - "--repo=github.com/GoogleCloudPlatform/cloud-run-events"
       - "--root=/go/src"
       - "--service-account=/etc/release-account/service-account.json"
       - "--upload=gs://knative-prow/logs"
@@ -3654,7 +3654,7 @@ periodics:
       - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
       - "./hack/release.sh"
       - "--dot-release"
-      - "--release-gcs googlecloudplatform/cloud-run-events"
+      - "--release-gcs knative-releases/cloud-run-events"
       - "--release-gcr gcr.io/knative-releases"
       - "--github-token /etc/hub-token/token"
       volumeMounts:
@@ -3687,7 +3687,7 @@ periodics:
       - "--scenario=kubernetes_execute_bazel"
       - "--clean"
       - "--job=$(JOB_NAME)"
-      - "--repo=github.com/googlecloudplatform/cloud-run-events"
+      - "--repo=github.com/GoogleCloudPlatform/cloud-run-events"
       - "--root=/go/src"
       - "--service-account=/etc/release-account/service-account.json"
       - "--upload=gs://knative-prow/logs"
@@ -3696,7 +3696,7 @@ periodics:
       - "--" # end kubernetes_execute_bazel flags (consider following flags as text)
       - "./hack/release.sh"
       - "--auto-release"
-      - "--release-gcs googlecloudplatform/cloud-run-events"
+      - "--release-gcs knative-releases/cloud-run-events"
       - "--release-gcr gcr.io/knative-releases"
       - "--github-token /etc/hub-token/token"
       volumeMounts:
@@ -3723,10 +3723,10 @@ periodics:
   agent: kubernetes
   decorate: true
   extra_refs:
-  - org: knative
-    repo: googlecloudplatform/cloud-run-events
+  - org: GoogleCloudPlatform
+    repo: cloud-run-events
     base_ref: master
-    clone_uri: "https://github.com/googlecloudplatform/cloud-run-events.git"
+    clone_uri: "https://github.com/GoogleCloudPlatform/cloud-run-events.git"
   spec:
     containers:
     - image: gcr.io/knative-tests/test-infra/coverage:latest
@@ -3970,13 +3970,13 @@ postsubmits:
         args:
         - "--artifacts=$(ARTIFACTS)"
         - "--cov-threshold-percentage=0"
-  googlecloudplatform/cloud-run-events:
+  GoogleCloudPlatform/cloud-run-events:
   - name: post-googlecloudplatform-cloud-run-events-go-coverage
     branches:
     - master
     agent: kubernetes
     decorate: true
-    clone_uri: "https://github.com/googlecloudplatform/cloud-run-events.git"
+    clone_uri: "https://github.com/GoogleCloudPlatform/cloud-run-events.git"
     spec:
       containers:
       - image: gcr.io/knative-tests/test-infra/coverage:latest
